--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   
-	<title>MINSTREL JOY</title>
+	<title>MINSTREL JOY CHRISTIAN</title>
 </head>
 <body>
 <header>
@@ -29,7 +29,7 @@
 </section>
 
 <section class="iframe">
-    <p class="lu">Watch the youtube video of <strong>"EMMANUEL</strong></p>
+    <p class="lu">Watch the youtube video of <strong>"EMMANUEL"</strong></p>
     <iframe width="300" height="250" src="https://www.youtube.com/embed/iczlwJCBJFY?si=g-TNo1F9Rqby6QDj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 
@@ -37,24 +37,24 @@
 <h2>lyrics of Emmanuel</h2>
 <div id="lyrics">
     <pre class="jtl">
-You answer,When we pray,you answer us,
-when we cry, you hear our voice
+You answer,When we pray,He answer us,
+when we cry, He hear our voice
 we are not alone for GOD is with us 
 EMMANUEL EMMANUEL 
-When we pray,you answer us,
-when we cry, you hear our voice
+When we pray,He answer us,
+when we cry, He hear our voice
 we are not alone for GOD is with us
 EMMANUEL EMMANUEL 
 La la la la la la la la,la la la
 la la la la la la la la la 
 EMMANUEL EMMANUEL
 </br>
-When we pray,you answer us,
-when we cry, you hear our voice
+When we pray,He answer us,
+when we cry, He hear our voice
 we are not alone for GOD is with us 
 EMMANUEL EMMANUEL 
-When we pray,you answer us,
-when we cry, you hear our voice
+When we pray,He answer us,
+when we cry, He hear our voice
 we are not alone for GOD is with us
 EMMANUEL EMMANUEL 
 La la la la la la la la,la la la
